# tapper

./: .autom4te.cfg  .copr  .hgignore  LICENSE.md  MANIFEST.md  META.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
LICENSES/: FSFAP.md  GPL-3.0-or-later.reuse  GPL-3.0.md
data/: tapper.desktop  tapper.gschema.xml  tapper.metainfo.xml
doc/en/: authors.md  readme.md  todo.md
doc/ru/: bugs.md  faq.md  install.md  news.md
etc/: dox.css.in  doxygen.conf  en_US.dic  rpmlint.conf  tapper.spec.in
html/: bottom.html.in  en.md.in  index.md  links.md.in  map.md.in  ru.md.in  scripts.js.in  search.html.in  style.css.in  template.html  top.html.in
m4/: autoblank.m4  rdf.m4  v4.m4  vc.m4  vdb.m4  vm.m4  vs.m4
man/: tapper.en.md.in  tapper.ru.md.in
src/: app.cpp  app.hpp  base.cpp  base.hpp  dbus.cpp  dbus.hpp  emitter-dummy.cpp  emitter-dummy.h  emitter-dummy.hpp  emitter-libevdev.cpp  emitter-libevdev.h  emitter-libevdev.hpp  emitter-xtest.cpp  emitter-xtest.h  emitter-xtest.hpp  emitter.cpp  emitter.hpp  key.hpp  layouter-dummy.cpp  layouter-dummy.h  layouter-dummy.hpp  layouter-gnome.cpp  layouter-gnome.h  layouter-gnome.hpp  layouter-kde.cpp  layouter-kde.h  layouter-kde.hpp  layouter-xkb.cpp  layouter-xkb.h  layouter-xkb.hpp  layouter.cpp  layouter.hpp  libevdev.cpp  libevdev.hpp  libinput.cpp  libinput.hpp  linux.cpp  linux.hpp  listener-libinput.cpp  listener-libinput.h  (+29 more)
test/: cmdline-actions.test  cmdline-keys.test  help.test  list-keys.test  list-layouts.test  termination.test
